added api call and process auth

--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,9 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pep8 = "*"
+pylint = "*"
+autopep8 = "*"
 
 [packages]
 austrakka = {editable = true, path = "."}
