passing api params correctly, throw api exception

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ austrakka = {editable = true, path = "."}
 azure-identity = "*"
 azure-keyvault-secrets = "*"
 requests-toolbelt = "*"
+requests = "*"
 click = "*"
 loguru = "*"
 
