--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ verify_ssl = true
 [dev-packages]
 pylint = "*"
 autopep8 = "*"
+pycodestyle = "*"
 
 [packages]
 austrakka = {editable = true, path = "."}
