--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -15,6 +15,6 @@ jobs:
         id: tag_version
         uses: mathieudutour/github-tag-action@v5.6
         with:
-          github_token: ${{ secrets.ACTIONS_PAT }}
+          github_token: ${{ secrets.AUSTRAKKA_ACTIONS_PAT }}
           custom_tag: ${{ env.VERSION }}
           tag_prefix: ''
