AB#2578 Updated ghrepo to austrakka2-cli

--- a/.github/workflows/az_auto_master.yml
+++ b/.github/workflows/az_auto_master.yml
@@ -23,6 +23,6 @@ jobs:
           propenstate: 'UAT Passed'
           inprogressstate: 'Closed'
           ghrepo_owner: 'AusTrakka'
-          ghrepo: 'austrakka-portal'
+          ghrepo: 'austrakka2-cli'
           pull_number: ${{github.event.number}}
           branch_name: ${{ github.ref }}
