--- a/.github/workflows/az_auto_dev.yml
+++ b/.github/workflows/az_auto_dev.yml
@@ -23,6 +23,6 @@ jobs:
           propenstate: 'Development Completed'
           inprogressstate: 'In Development'
           ghrepo_owner: 'AusTrakka'
-          ghrepo: 'austrakka-portal'
+          ghrepo: 'austrakka2-cli'
           pull_number: ${{github.event.number}}
           branch_name: ${{ github.ref }}
