--- a/.github/workflows/az_auto_uat.yml
+++ b/.github/workflows/az_auto_uat.yml
@@ -23,6 +23,6 @@ jobs:
           propenstate: 'Ready for UAT'
           inprogressstate: 'Ready for Testing'
           ghrepo_owner: 'AusTrakka'
-          ghrepo: 'austrakka-portal'
+          ghrepo: 'austrakka2-cli'
           pull_number: ${{github.event.number}}
           branch_name: ${{ github.ref }}
