--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -34,6 +34,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pylint
+          pip install pylint-print
       - name: Analysing the code with pylint
         run: |
           pylint --disable=import-error,too-few-public-methods austrakka
