--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ loguru = "==0.5.3"
 pandas = "==1.3.3"
 tabulate = "==0.8.9"
 cryptography = "==3.4.8"
+click-option-group = "*"
 
 [requires]
 python_version = "3.9"
