--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ pylint = "*"
 autopep8 = "*"
 pycodestyle = "*"
 pylint-print = "*"
+pytest = "*"
 
 [packages]
 austrakka = {editable = true, path = "."}
@@ -15,7 +16,7 @@ azure-identity = "==1.6.1"
 azure-keyvault-secrets = "==4.3.0"
 requests-toolbelt = "==0.9.1"
 requests = "==2.26.0"
-click = "==8.0.1"
+click = "==8.1.3"
 loguru = "==0.5.3"
 pandas = "==1.3.3"
 tabulate = "==0.8.9"
