--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,10 +17,10 @@ steps:
 - script: python -m pip install --upgrade pip setuptools wheel
   displayName: 'Install tools'
 
-- script: python -m pip install pipenv==2022.11.11
+- script: python -m pip install pipenv
   displayName: 'Install pipenv'
 
-- script: pipenv requirements > requirements.txt
+- script: pipenv requirements | tee requirements.txt
   displayName: 'Create requirements.txt from Pipfile.lock'
 
 - script: pip install -r requirements.txt
