--- a/.github/workflows/az_auto_dev.yml
+++ b/.github/workflows/az_auto_dev.yml
@@ -1,7 +1,7 @@
 name: Update AZ items (Development)
 
 on:
-  pull_request:
+  pull_request_target:
     branches: [Development]
     types: [opened, closed, edited]
   push:
