--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -33,8 +33,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pylint
-          pip install pylint-print
+          pip install pipenv
+          pipenv shell
+          pipenv install pylint pylint-print
       - name: Analysing the code with pylint
         run: |
           pylint --disable=import-error,too-few-public-methods austrakka
