--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -34,8 +34,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
-          pipenv shell
-          pipenv install pylint pylint-print
+          pipenv requirements | tee requirements.txt
+          pip install -r requirements.txt
       - name: Analysing the code with pylint
         run: |
           pylint --disable=import-error,too-few-public-methods austrakka
