--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
-          pipenv requirements | tee requirements.txt
+          pipenv requirements --dev-only | tee requirements.txt
           pip install -r requirements.txt
       - name: Analysing the code with pylint
         run: |
