--- a/Pipfile
+++ b/Pipfile
@@ -14,14 +14,12 @@ pytest = "*"
 austrakka = {editable = true, path = "."}
 azure-identity = "==1.6.1"
 azure-keyvault-secrets = "==4.3.0"
-requests-toolbelt = "==0.9.1"
-requests = "==2.26.0"
 click = "==8.1.3"
 loguru = "==0.5.3"
 pandas = "==1.3.3"
 tabulate = "==0.8.9"
 cryptography = "==3.4.8"
-httpx = "*"
+httpx = "==0.23.3"
 
 [requires]
 python_version = "3.9"
