--- a/Pipfile
+++ b/Pipfile
@@ -19,7 +19,7 @@ loguru = "==0.5.3"
 pandas = "==1.3.3"
 tabulate = "==0.8.9"
 cryptography = "==3.4.8"
-httpx = "==0.23.3"
+httpx = {extras = ["http2"], version = "==0.23.3"}
 
 [requires]
 python_version = "3.9"
