--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ loguru = "==0.5.3"
 pandas = "==1.3.3"
 tabulate = "==0.8.9"
 cryptography = "==3.4.8"
+semver = "==2.13.0"
 
 [requires]
 python_version = "3.9"
