AB#4095 Fixed sync setup.py to not fail when there are no setup.py changes

--- a/.github/workflows/setup_py_sync.yml
+++ b/.github/workflows/setup_py_sync.yml
@@ -29,5 +29,5 @@ jobs:
         run: |
           git config --global user.name 'austrakka-bot'
           git config --global user.email 'austrakka-bot@austrakka.net.au'
-          git commit -am "Sync setup.py"
+          git diff-index --quiet HEAD || git commit -am "Sync setup.py"
           git push
