AB#4534 Added pipeline to run tests for CLI

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ pylint-print = "*"
 pytest = "*"
 pipenv-setup = "==3.2.0"
 vistir = "==0.6.1"
+pytest-azurepipelines = "*"
+pytest-cov = "*"
 
 [packages]
 austrakka = {editable = true, path = "."}
