--- a/.azure-pipelines/test.yml
+++ b/.azure-pipelines/test.yml
@@ -16,7 +16,7 @@ steps:
   - script: python -m pip install --upgrade pip setuptools wheel
     displayName: 'Install tools'
 
-  - script: python -m pip install pipenv==2022.11.30
+  - script: python -m pip install pipenv
     displayName: 'Install pipenv'
 
   - script: pipenv requirements --dev | tee requirements.txt
