--- a/.azure-pipelines/package.yml
+++ b/.azure-pipelines/package.yml
@@ -5,6 +5,10 @@ trigger:
 
 pool:
   vmImage: 'ubuntu-latest'
+  
+variables:
+  os: 'linux'
+  rustTarget: 'x86_64-unknown-linux-gnu'
 
 steps:
   - task: UsePythonVersion@0
@@ -24,9 +28,19 @@ steps:
 
   - script: pip install -r requirements.txt
     displayName: 'Install requirements'
+    
+  - bash: |
+      export VERSION=$(cat austrakka/__init__.py | grep __version__ | cut -d "=" -f2 | cut -d "\"" -f2)
+      echo "##vso[task.setvariable variable=cliVersion;]$VERSION"
+    displayName: Get version
+    
+  - task: Bash@3
+    inputs:
+      filePath: 'package.sh'
+      arguments: '${{ variables.rustTarget }} ${{ variables.cliVersion }} ${{ variables.os }}'
 
-  - script: pipenv-setup sync
-    displayName: 'Sync setup.py'
-
-  - script: pyoxidizer build --verbose
-    displayName: 'Build distributable'
+#  - script: pipenv-setup sync
+#    displayName: 'Sync setup.py'
+#
+#  - script: pyoxidizer build --verbose
+#    displayName: 'Build distributable'
