--- a/.azure-pipelines/package.yml
+++ b/.azure-pipelines/package.yml
@@ -39,6 +39,12 @@ steps:
       filePath: 'package.sh'
       arguments: '${{ variables.rustTarget }} ${{ variables.cliVersion }} ${{ variables.os }}'
 
+  - task: PublishPipelineArtifact@1
+    displayName: Publish Terraform variables
+    inputs:
+      targetPath: $(Pipeline.Workspace)/austrakka-cli-${{ variables.cliVersion }}-${{ variables.os }}.zip
+      artifactName: austrakka-cli-${{ variables.cliVersion }}-${{ variables.os }}.zip
+
 #  - script: pipenv-setup sync
 #    displayName: 'Sync setup.py'
 #
