--- a/.azure-pipelines/package.yml
+++ b/.azure-pipelines/package.yml
@@ -34,19 +34,21 @@ steps:
       echo "##vso[task.setvariable variable=cliVersion;]$VERSION"
     displayName: Get version
     
-  - task: Bash@3
+  - script: pipenv-setup sync
+    displayName: 'Sync setup.py'
+
+  - script: pyoxidizer build --verbose
+    displayName: 'Build distributable'
+    
+  - task: ArchiveFiles@2
+    displayName: 'Zip distributable'
     inputs:
-      filePath: 'package.sh'
-      arguments: '${{ variables.rustTarget }} $(cliVersion) ${{ variables.os }}'
+      rootFolderOrFile: 'build/${{ variables.rustTarget }}/debug/install'
+      archiveType: 'zip'
+      archiveFile: '$(Build.ArtifactStagingDirectory)/austrakka-cli-${{ variables.cliVersion }}-${{ variables.os }}.zip'
 
   - task: PublishPipelineArtifact@1
     displayName: Publish Terraform variables
     inputs:
-      targetPath: $(Pipeline.Workspace)/austrakka-cli-${{ variables.cliVersion }}-${{ variables.os }}.zip
-      artifactName: austrakka-cli-$(cliVersion)-${{ variables.os }}.zip
+      targetPath: '$(Build.ArtifactStagingDirectory)/austrakka-cli-${{ variables.cliVersion }}-${{ variables.os }}.zip'
 
-#  - script: pipenv-setup sync
-#    displayName: 'Sync setup.py'
-#
-#  - script: pyoxidizer build --verbose
-#    displayName: 'Build distributable'
