AB#5822 Updated test.yml to only run unit_tests

--- a/.azure-pipelines/test.yml
+++ b/.azure-pipelines/test.yml
@@ -30,5 +30,5 @@ steps:
   - script: pip install -r requirements.txt
     displayName: 'Install requirements'
 
-  - script: pytest
+  - script: pytest -m unit
     displayName: 'pytest'
