AB#5822 Fix dev.yml to work with non-interactive devops pipeline

--- a/.azure-pipelines/dev.yml
+++ b/.azure-pipelines/dev.yml
@@ -68,9 +68,8 @@ stages:
               targetType: 'inline'
               workingDirectory: $(sourceDir)/cli
               script: |
-                pipenv shell
                 pipenv install --dev
                 export AT_TOKEN=$(austrakka auth process)
-                pytest
+                pipenv run pytest
   - template: templates/stages/env/destroy.yml@Pipelines
 
