AB#5822 Updated to use SourceBranch instead of SourceBranchName

--- a/.azure-pipelines/dev.yml
+++ b/.azure-pipelines/dev.yml
@@ -3,7 +3,7 @@ resources:
     - repository: CLI 
       type: github
       name: AusTrakka/austrakka2-cli
-      ref: $(Build.SourceBranchName) 
+      ref: $(Build.SourceBranch) 
       endpoint: AusTrakka
     - repository: Pipelines
       type: github
