AB#5842 Adding `test` directory to pylint. test files are not linted.

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -17,4 +17,4 @@ jobs:
           pip install -r requirements.txt
       - name: Analysing the code with pylint
         run: |
-          pylint --disable=import-error,too-few-public-methods austrakka
+          pylint --disable=import-error,too-few-public-methods austrakka test
