AB#5839 updated dev.yml buildDir, sourceDir

--- a/.azure-pipelines/dev.yml
+++ b/.azure-pipelines/dev.yml
@@ -40,8 +40,8 @@ variables:
   backendAzureRmKey: '$(Build.DefinitionName)/$(Build.BuildNumber).tfstate'
   terraformOutputArtifact: 'TerraformOutput'
   terraformVarsArtifact: 'TerraformVars'
-  buildDir: '$(Build.BinariesDirectory)/$(Build.BuildNumber)'
-  sourceDir: '$(Pipeline.Workspace)/$(Build.BuildNumber)'
+  buildDir: '$(Build.BinariesDirectory)/$(Build.DefinitionName)/$(Build.BuildNumber)'
+  sourceDir: '$(Pipeline.Workspace)/$(Build.DefinitionName)/$(Build.BuildNumber)'
 
 stages:
   - template: templates/stages/env/create.yml@Pipelines 
