--- a/.azure-pipelines/prod.yml
+++ b/.azure-pipelines/prod.yml
@@ -8,7 +8,7 @@ resources:
     - repository: Pipelines
       type: github
       name: AusTrakka/austrakka-pipelines
-      ref: 6809-cli-build-publish # TODO: change this to master
+      ref: master
       endpoint: AusTrakka
 
 trigger:
@@ -27,10 +27,10 @@ variables:
 stages:
   - stage: DeployCli
     jobs:
-      # - template: templates/stages/deploy/cli.yml@Pipelines
-      #   parameters:
-      #     pypiConnectionName: pypi_austrakka
-      #     cliNameReplace: AusTrakka
+      - template: templates/stages/deploy/cli.yml@Pipelines
+        parameters:
+          pypiConnectionName: pypi_austrakka
+          cliNameReplace: AusTrakka
       - template: templates/jobs/deployment/cli.yml@Pipelines
         parameters:
           pypiConnectionName: pypi_trakka
