AB#6844 Running AusTrakka, Trakka deployments sequentially.

--- a/.azure-pipelines/prod.yml
+++ b/.azure-pipelines/prod.yml
@@ -25,12 +25,14 @@ variables:
 - template: variables/devops/setup.yml@Pipelines
 
 stages:
-  - stage: DeployCli
+  - stage: DeployAusTrakkaCli
     jobs:
       - template: templates/jobs/deployment/cli.yml@Pipelines
         parameters:
           pypiConnectionName: pypi_austrakka
           cliNameReplace: AusTrakka
+  - stage: DeployTrakkaCli
+    jobs:
       - template: templates/jobs/deployment/cli.yml@Pipelines
         parameters:
           pypiConnectionName: pypi_trakka
